[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Level 1/BossBody.png" type="Texture" id=1]
[ext_resource path="res://Assets/Level 1/LeftArm.png" type="Texture" id=2]
[ext_resource path="res://Assets/Level 1/RightArm.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/PoliceBoss.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/Move.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/Shoot.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/Idle.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/Torso.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Level 1/Enemies/PoliceBoss/Flip.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 63 )

[sub_resource type="Animation" id=3]
resource_name = "Defeat"
length = 5.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 2.2, 3.4, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -190, -51 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -136, -12 ) ],
"method": "explode"
}, {
"args": [ Vector2( -136, -12 ) ],
"method": "explode"
}, {
"args": [ Vector2( -190, -51 ) ],
"method": "explode"
}, {
"args": [ Vector2( -136, -12 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -136, -12 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -190, -51 ) ],
"method": "explode"
}, {
"args": [ Vector2( -136, -12 ) ],
"method": "explode"
}, {
"args": [ Vector2( -59, 44 ) ],
"method": "explode"
}, {
"args": [ Vector2( -190, -51 ) ],
"method": "explode"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 0 ), Vector2( -35, -500 ), Vector2( -6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 123, 0 ), Vector2( 94, -500 ), Vector2( 123, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -29, -450 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 0 ), Vector2( -35, -500 ), Vector2( -6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 123, 0 ), Vector2( 94, -500 ), Vector2( 123, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -29, -450 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 260.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 260.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -47, 0 ), Vector2( 34, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 82.3333, 0 ), Vector2( 102, 3 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 34, 0 ), Vector2( 56, -30 ), Vector2( -3, -30 ), Vector2( 44, 30 ), Vector2( 56, 30 ), Vector2( 13, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7, 0.8, 1.2, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 123, 30 ), Vector2( 135, 30 ), Vector2( 76, 30 ), Vector2( 123, -30 ), Vector2( 135, -30 ), Vector2( 76, -30 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("States/Shoot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ NodePath("Position2D"), 1, 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D2"), 1, 2 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D"), 1, 1 ],
"method": "shoot"
}, {
"args": [ NodePath("Position2D2"), 1, 2 ],
"method": "shoot"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -30, -39 ), Vector2( -30, 61 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Position2D2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 61 ), Vector2( 35, -39 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 0 ), Vector2( -6, -169 ), Vector2( -6, -85 ), Vector2( -6, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 123, 0 ), Vector2( 123, -169 ), Vector2( 123, -85 ), Vector2( 123, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -150 ), Vector2( 0, -75 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightArm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("States/Flip")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flipper_no"
}, {
"args": [  ],
"method": "flipper"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk Mode"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("RightArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 260.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 260.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 34, 0 ), Vector2( -6, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 102, 3 ), Vector2( 123, 0 ) ]
}

[node name="Boss" type="Node2D"]
position = Vector2( -91, 0 )
scale = Vector2( -1, 1 )
script = ExtResource( 4 )

[node name="LeftArm" type="KinematicBody2D" parent="."]
position = Vector2( -6, 0 )
z_index = -1
collision_mask = 4

[node name="Sprite" type="Sprite" parent="LeftArm"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm"]
position = Vector2( -1, 8 )
shape = SubResource( 1 )

[node name="Scout" type="Area2D" parent="LeftArm"]
monitoring = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LeftArm/Scout"]
position = Vector2( -1, 8 )
shape = SubResource( 1 )

[node name="Torso" type="KinematicBody2D" parent="."]
collision_layer = 3
collision_mask = 4
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Torso"]
position = Vector2( 37, -51 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
position = Vector2( 56, -41 )
z_index = 1
shape = SubResource( 2 )

[node name="Scout" type="Area2D" parent="Torso"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Torso/Scout"]
position = Vector2( 56, -41 )
z_index = 1
shape = SubResource( 2 )

[node name="RightArm" type="KinematicBody2D" parent="."]
position = Vector2( 123, 0 )
collision_mask = 4

[node name="Sprite" type="Sprite" parent="RightArm"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Scout" type="Area2D" parent="RightArm"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightArm/Scout"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Defeat"
anims/Defeat = SubResource( 3 )
"anims/Flip Left" = SubResource( 4 )
"anims/Flip Right" = SubResource( 5 )
"anims/Shoot Mode" = SubResource( 6 )
anims/Shooting = SubResource( 7 )
anims/Walk = SubResource( 8 )
"anims/Walk Mode" = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="AnimationPlayer"]
position = Vector2( -189, -51 )

[node name="States" type="Node" parent="."]

[node name="Move" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Flip" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="States/Shoot"]
wait_time = 10.0
one_shot = true

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -30, -14 )
rotation = 4.53786

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 35, 7.15384 )
rotation = 4.53786

[node name="HitStop" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.04

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 37, -13 )
current = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="States/Shoot/Timer" to="States/Shoot" method="_on_Timer_timeout"]
[connection signal="timeout" from="HitStop" to="." method="_on_HitStop_timeout"]
